<resources>
    <string name="app_name">ToDoList</string>
    <!-- Menu List  -->
    <string name="menuMonth">월별 보기</string>
    <string name="menuList">리스트 보기</string>
    <string name="menuCategory">카테고리 보기</string>

    <!--  mainActivity  -->
    <string name="main_txt_date">2022.03.29(화)</string>
    <string name="main_txt_listSize"> / 5</string>
    <string name="main_txt_complete">3</string>

    <!--   mainListItem(recyclerview)     -->
    <string name="main_item_mainCategory">알고리즘 공부</string>
    <string name="main_item_subCategory">알고리즘 책 반 읽기</string>
    <string name="main_item_dDay">D -</string>
    <string name="main_item_date">Day</string>

        <!--  FAB item  -->
    <string name="main_fab_Main">M</string>
    <string name="main_fab_Sub">S</string>

    <!--  showMainPlan  -->
    <string name="btn_month">2022.04</string>
    <!--  eidtMainPlan  -->
    <string name="btn_date">2022.04.05</string>

    <!--  dialog  -->
    <string name="dialog_spinnerTag">카테고리</string>
    <string name="dialog_btnOK">확인</string>
    <string name="dialog_btnCancel">취소</string>

    <!--  slide item -->
    <string name="item_edit">수정</string>
    <string name="item_delete">삭제</string>

</resources>