<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/dialog_subDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/btn_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_item_dDay"
        android:textSize="@dimen/txt_mideum"
        app:layout_constraintBottom_toTopOf="@+id/dialog_spinnerContainer"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialog_main_dDayTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_item_date"
        android:textSize="@dimen/txt_mideum"
        app:layout_constraintBottom_toTopOf="@+id/dialog_spinnerContainer"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/dialog_spinnerContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/dialog_subDate">

        <TextView
            android:id="@+id/spinnerTag"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/dialog_spinnerTag" />

        <Spinner
            android:id="@+id/dialog_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:minWidth="250dp"
            android:minHeight="48dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/editMain_subPlanEditText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/whitegray"
        android:ems="10"
        android:hint="@string/main_item_mainCategory"
        android:inputType="text|textMultiLine"
        android:minHeight="48dp"
        android:padding="8dp"
        android:layout_margin="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_spinnerContainer" />

    <Button
        android:id="@+id/dialog_buttonOK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/dialog_btnOK"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editMain_subPlanEditText" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="70dp" />

</androidx.constraintlayout.widget.ConstraintLayout>