<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!--  menuLayout  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#eeeeee"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/item_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/purple_500"
            android:text="@string/item_edit"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_weight="3"/>
        <TextView
            android:id="@+id/item_delete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/purple_700"
            android:text="@string/item_delete"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_weight="3"/>
    </LinearLayout>

    <!-- mainLayout -->
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white" >

    <CheckBox
        android:id="@+id/main_item_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_item_txtMainCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray"
        android:layout_marginTop="8dp"
        android:text="@string/main_item_mainCategory"
        android:textSize="@dimen/txt_small"
        app:layout_constraintStart_toEndOf="@+id/main_item_check"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_item_txtSubCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray"
        android:layout_marginBottom="16dp"
        android:text="@string/main_item_subCategory"
        android:textSize="@dimen/txt_mideum"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/main_item_check"
        app:layout_constraintTop_toBottomOf="@+id/main_item_txtMainCategory" />

    <TextView
        android:id="@+id/mainItem_txt_dDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray"
        android:text="@string/main_item_dDay"
        android:textSize="@dimen/txt_mideum"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mainItem_txt_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray"
        android:text="@string/main_item_date"
        android:textSize="@dimen/txt_mideum"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/txt_small"
        android:orientation="vertical"
        app:layout_constraintGuide_end="40dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/txt_small"
        android:orientation="vertical"
        app:layout_constraintGuide_end="5dp" />


</androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>
    <!--TODO : text 자동 크기 조절 가능하면 해보기-->
