<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/editMain_dateBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_item_dDay"
                android:textSize="@dimen/txt_mideum"
                app:layout_constraintBottom_toTopOf="@+id/guideline5"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/editMain_dDayTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_item_date"
                android:textSize="@dimen/txt_mideum"
                app:layout_constraintBottom_toTopOf="@+id/guideline5"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="50dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="47dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="10dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/editMain_subPlanEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/whitegray"
            android:ems="10"
            android:hint="@string/main_item_subCategory"
            android:inputType="text|textMultiLine"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="16dp"
            android:background="@color/black"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/editMainPlan_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginTop="8dp"
            android:layout_weight="1"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_action_plus"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>